--- a/styles/themeGlobal.scss
+++ b/styles/themeGlobal.scss
@@ -13,7 +13,9 @@
 
 
 
+body{
+    display: block;
+}
 
 
-
-@import "../node_modules/bootstrap/dist/css/bootstrap.css"
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css"
