set correct smartphone view css

--- a/styles/partials/_learning.scss
+++ b/styles/partials/_learning.scss
@@ -32,6 +32,10 @@
         .col-image{
             position: absolute;
             opacity: 0.2;
+            Img{
+                padding-right: 80px;
+padding-bottom: 80px;
+            }
         }
         .textCol{
             z-index: 1;
