set other correct css

--- a/styles/themeGlobal.scss
+++ b/styles/themeGlobal.scss
@@ -12,11 +12,11 @@
 
 
 
-
+@media (max-width: 799px){
 body{
     display: flex;
     margin-left: 70px;
 }
 
-
+}
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css"
