--- a/styles/partials/_contacts.scss
+++ b/styles/partials/_contacts.scss
@@ -33,9 +33,10 @@
 @media (max-width: 1000px){
     .contactForm{
         
-        //padding: 100px;
-        margin-top: 40px;
-        //padding-left: -40px;
+        margin-left: -50px;
+        margin-right: 15px;
+        margin-top: 150px;
+        padding: 10px;
     
         .TitleForm{
             color: $primaryColor;
@@ -51,11 +52,8 @@
             font-size: small;
             z-index: 1;
             width: 100%;
-            position: relative;
-            .contact-fieldset{
-                //padding: 30px;
-
-            }
+            //position: relative;
+         
         }
         .colImage{
             
