--- a/styles/partials/_preventive.scss
+++ b/styles/partials/_preventive.scss
@@ -45,9 +45,10 @@
 
 @media (max-width: 1000px){
     .preventiveForm{
-        padding: 100px;
-        margin-top: 200px;
-        padding-left: 100px;
+        margin-left: -50px;
+        margin-right: 15px;
+        margin-top: 150px;
+        padding: 10px;
     
         .TitleForm{
             color: $primaryColor;
