Fix button and start build MintErc20

--- a/styles/themeGlobal.scss
+++ b/styles/themeGlobal.scss
@@ -9,6 +9,7 @@
 @use "./partials/preventive";
 @use "./partials/servicesPage";
 @use "./partials/workingProgress";
+@use "./partials/services/tokenErc20";
 
 
 
