--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -7,5 +7,14 @@ $headerSection:rgb(184, 165, 148);
 $SolidityColor: rgb(33, 33, 49);
 $NextJsColor:#0e6876;
 
+
 $dropDownColor: rgb(76, 68, 68);
 $formEmailBackground : #FF7F50;
+
+
+
+// EVM section
+$primaryBackgroundEVM : #f7f1ed;
+$primaryColorEVM: #febeb0;
+$secondaryColorEVM: #3d5a5b;
+$footerColorEVM: #2f365f;
