--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -19,6 +19,11 @@
       font-size: 20px;
       padding-top: 20px;
       margin-bottom: 10px;
+    
+    }
+    .link-component{
+      text-decoration: none;
+      color: $footerColor;
     }
 
     .fa-stack {
