--- a/styles/partials/services/_tokenErc20.scss
+++ b/styles/partials/services/_tokenErc20.scss
@@ -1,6 +1,5 @@
 @import "../../variables.scss";
 
-
 .token-erc20Area {
   position: relative;
   display: flex;
@@ -13,55 +12,62 @@
     background-color: $secondaryColorEVM;
     color: $primaryBackgroundEVM;
     margin-bottom: 30px;
-   
   }
-  .box-form{
+  .box-form {
     background-color: $primaryColorEVM;
     display: flex;
     flex-direction: start;
-    align-items:center;
+    align-items: center;
     padding: 20px;
-    .titleform{
-        padding-bottom: 10px;
+    .titleform {
+      padding-bottom: 10px;
     }
     .FormErc20standard {
-        display: flex;
-        flex-direction: column;
-        align-items:flex-start;
-        .col-sm-10{
-            margin-left: 10px;
-            padding-bottom: 5px;
-        }
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      .col-sm-10 {
+        margin-left: 10px;
+        padding-bottom: 5px;
       }
-    
+    }
+    .git-button {
+      color: black;
+      margin-left: 10px;
+      margin-top: 6px;
+    }
+    .address-token{
+      margin-top: 15px;
+      margin-left: 5px;
+    }
   }
-  .describ-token{
+  .describ-token {
     padding-top: 20px;
     padding-bottom: 20px;
-    h2{
+    h2 {
       margin-bottom: 15px;
     }
-    ul{
+    ul {
       list-style-type: none;
-      p{
+      p {
         padding-left: 20px;
         text-align: justify;
       }
     }
   }
-  .Plus-service-section{
+  .Plus-service-section {
     margin-top: 30px;
-    p{
+    p {
       padding-left: 20px;
       text-align: justify;
     }
-    .Plus-service-section-bt{
+    .Plus-service-section-bt {
       margin-left: 20px;
     }
   }
 }
-@media (max-width: 1000px){
-  
+
+@media (max-width: 1000px) {
   .token-erc20Area {
     position: relative;
     padding-left: 0px;
@@ -73,59 +79,63 @@
       margin-top: 30px;
       margin-bottom: 30px;
       font-size: 15px;
-      h3{
+      h3 {
         font-size: 30px;
       }
     }
 
-    .describ-token{
+    .describ-token {
       padding-top: 20px;
       padding-bottom: 30px;
       font-size: 15px;
-      h2{
+      h2 {
         margin-bottom: 10px;
       }
-      ul{
+      ul {
         list-style-type: none;
-        p{
+        p {
           padding-left: 5px;
           text-align: justify;
         }
       }
     }
 
-    .box-form{
+    .box-form {
       display: flex;
       flex-direction: start;
-      align-items:center;
+      align-items: center;
       padding-top: 20px;
-      .titleform{
-          padding-bottom: 10px;
+      .titleform {
+        padding-bottom: 10px;
       }
       .FormErc20standard {
-          display: flex;
-          flex-direction: column;
-          align-items:flex-start;
-          .col-sm-10{
-              margin-left: 10px;
-              padding-bottom: 5px;
-          }
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        .col-sm-10 {
+          margin-left: 10px;
+          padding-bottom: 5px;
+        }
       }
 
-      .Plus-service-section{
+      .Plus-service-section {
         margin-top: 30px;
         z-index: 1;
         width: 100%;
-        p{
+        p {
           padding-left: 20px;
           text-align: justify;
         }
-        .Plus-service-section-bt{
+        .Plus-service-section-bt {
           margin-left: 20px;
         }
       }
-        
-      
+
+      .git-button {
+        text-decoration: none;
+        margin-left: 10px;
+        margin-top: 6px;
+      }
     }
   }
 }
