--- a/styles/partials/services/_tokenErc20.scss
+++ b/styles/partials/services/_tokenErc20.scss
@@ -36,9 +36,39 @@
       margin-left: 10px;
       margin-top: 6px;
     }
-    .address-token{
+    .address-token {
       margin-top: 15px;
       margin-left: 5px;
+    }
+    .interact {
+      padding-top: 30px;
+      margin-top: 30px;
+      color: $footerColor;
+      background: $footerColorEVM;
+      .col-10 {
+        margin-left: 10px;
+        .interface-header {
+          .form-interface{
+            .contract-selector {
+              margin-bottom: 20px;
+            }
+          }
+        }
+
+        h6 {
+          padding-top: 30px;
+          text-decoration: underline;
+        }
+        .col {
+          margin-left: 20px;
+        }
+        button {
+          background: whitesmoke;
+          color: black;
+          margin-top: 32px;
+          margin-right: 10px;
+        }
+      }
     }
   }
   .describ-token {
@@ -135,6 +165,41 @@
         text-decoration: none;
         margin-left: 10px;
         margin-top: 6px;
+      }
+
+      .interact {
+        width: 300px;
+
+        .col-10 {
+          margin-left: 0px;
+          h6 {
+            padding-top: 20px;
+            margin-left: 0px;
+          }
+          .col {
+            margin-left: 0px;
+          }
+
+          button {
+            margin-top: 5px;
+            margin-right: 50px;
+          }
+          .burnButton {
+            margin-top: 32px;
+            margin-right: 10px;
+          }
+          .transfer-Owner {
+            width: 200px;
+          }
+          .PausableButton {
+            margin-top: 0px;
+            margin-right: 0px;
+          }
+          .UnPausableButton {
+            margin-top: 5px;
+            margin-right: 30px;
+          }
+        }
       }
     }
   }
